верхнее меню навигации страницы

--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header-menu">
+                <div class="menu-logo">
+                    <a href="#!" class="logo-link">
+                        <img src="" alt="XRAdept">
+                    </a>
+                </div>
+                <div class="menu-list">
+                    <ul class="menu-items">
+                        <li class="menu-link">
+                            <a href="#!" class="link-item">Скачать</a>
+                        </li>
+                        <li class="menu-link">
+                            <a href="#!" class="link-item">Тарифы</a>
+                        </li>
+                        <li class="menu-link">
+                            <a href="#!" class="link-item">Свяжитесь с нами</a>
+                        </li>
+                        <li class="menu-link">
+                            <a href="#!" class="link-item">
+                                <img src="" alt="Sing-in">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
