--- a/index.html
+++ b/index.html
@@ -7,6 +7,93 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="possibilities1">
+        <div class="possibilities-section">
+            <div class="continaer">
+                <p class="possibilities-maintitle white-maintitle">
+                    Больше возможностей
+                </p>
+                <div class="possibilities-row">
+                    <h2 class="possibilities-h2 white-h2">
+                        Профессиональные инструменты для вашего бизнеса
+                    </h2>
+                    <img src="images/possibilities-logo.svg" alt="possibilities-logo" class="possibilities-logo">
+                </div>
+                <p class="possibilities-title white-title">
+                    Удалённый эксперт
+                </p>
+                <p class="possibilities-subtitle white-subtitle">
+                    Используйте графические подсказки, отображающиеся на реальных объектах, чтобы помочь работникам или клиентам справиться с нестандартной ситуацией.
+                </p>
+            </div>
+        </div>
+        <div class="continaer">
+            <img src="images/phone.png" alt="possibilities-phone" class="possibilities-phone">
+            <img src="images/macbook-phone.png" alt="possibilities-macbook-phone" class="possibilities-macbook-phone">
+            <div class="possibilities-navigation">
+                <a href="#!" class="possibilities-line possibilities-line-first possibilities-line-active"></a>
+                <a href="#!" class="possibilities-line possibilities-line-second"></a>
+                <a href="#!" class="possibilities-line possibilities-line-third"></a>
+            </div>
+        </div>
+    </section>
+    <section class="possibilities2">
+        <div class="possibilities-section">
+            <div class="continaer">
+                <p class="possibilities-maintitle white-maintitle">
+                    Больше возможностей
+                </p>
+                <div class="possibilities-row">
+                    <h2 class="possibilities-h2 white-h2">
+                        Профессиональные инструменты для вашего бизнеса
+                    </h2>
+                    <img src="images/possibilities-logo.svg" alt="possibilities-logo" class="possibilities-logo">
+                </div>
+                <p class="possibilities-title white-title">
+                    Управление экспертами
+                </p>
+                <p class="possibilities-subtitle white-subtitle">
+                    Добавляйте в программу сотрудников, оказывающих удалённую помощь, и следите за эффективностью их работы.
+                </p>
+            </div>
+        </div>
+        <div class="continaer">
+            <img src="images/macbook.png" alt="possibilities-macbook" class="possibilities-macbook">
+            <div class="possibilities-navigation">
+                <a href="#!" class="possibilities-line possibilities-line-first possibilities-line-active"></a>
+                <a href="#!" class="possibilities-line possibilities-line-second"></a>
+                <a href="#!" class="possibilities-line possibilities-line-third"></a>
+            </div>
+        </div>
+    </section>
+    <section class="possibilities3">
+        <div class="possibilities-section">
+            <div class="continaer">
+                <p class="possibilities-maintitle white-maintitle">
+                    Больше возможностей
+                </p>
+                <div class="possibilities-row">
+                    <h2 class="possibilities-h2 white-h2">
+                        Профессиональные инструменты для вашего бизнеса
+                    </h2>
+                    <img src="images/possibilities-logo.svg" alt="possibilities-logo" class="possibilities-logo">
+                </div>
+                <p class="possibilities-title white-title">
+                    Инструкции в дополненной реальности(<span class="white-subtitle"> В стадии бета-тестирования </span>)
+                </p>
+                <p class="possibilities-subtitle white-subtitle">
+                    Снимайте видео и добавляйте в него графические элементы. шаг за шагом показывая, как правильно провести настройку, сборку и ремонт.
+                </p>
+            </div>
+        </div>
+        <div class="continaer">
+            <img src="images/microchips.png" alt="possibilities-microchips" class="possibilities-microchips">
+            <div class="possibilities-navigation">
+                <a href="#!" class="possibilities-line possibilities-line-first possibilities-line-active"></a>
+                <a href="#!" class="possibilities-line possibilities-line-second"></a>
+                <a href="#!" class="possibilities-line possibilities-line-third"></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
