Готовое меню со стилями

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container-menu">
             <div class="header-menu">
                 <div class="menu-logo">
                     <a href="#!" class="logo-link">
-                        <img src="" alt="XRAdept">
+                        <img src="./images/header-logo.svg" alt="XRAdept">
                     </a>
                 </div>
                 <div class="menu-list">
@@ -28,12 +28,15 @@
                         </li>
                         <li class="menu-link">
                             <a href="#!" class="link-item">
-                                <img src="" alt="Sing-in">
+                                <img src="./images/singin-ico.svg" alt="Sing-in">
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
+        </div>
+        <div class="container">
+            
         </div>
     </header>
 </body>
