добавил контент header

--- a/index.html
+++ b/index.html
@@ -36,7 +36,22 @@
             </div>
         </div>
         <div class="container">
-            
+            <div class="header-main">
+                <div class="content-title">
+                    Удаленные консультации
+                </div>
+                <div class="content-subtitle">
+                    в дополненной реальности
+                </div>
+                <div class="content-description">
+                    В центре внимания - поддержка сотрудников и клиентов
+                </div>
+                <div class="content-button">
+                    <a href="#!" class="button-link">
+                        Попробовать бесплатно
+                    </a>
+                </div>
+            </div>
         </div>
     </header>
 </body>
