--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="section-efficiency">
+      <div class="section-container container">
+        <p class="about">Эффективность</p>
+        <div class="subtitle-block">
+          <div class="section-subtitle">
+            Больше, чем просто удаленная поддержка 
+          </div>
+          <div class="subtitle-ico">
+            <img src="./images/customer_support_ico.svg" alt="customer support">
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
