Блок Незамедлительная диагностика

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="section-efficiency">
-      <div class="section-container container">
+      <div class="container">
         <p class="about">Эффективность</p>
         <div class="subtitle-block">
           <div class="section-subtitle">
@@ -17,6 +17,14 @@
           <div class="subtitle-ico">
             <img src="./images/customer_support_ico.svg" alt="customer support">
           </div>
+        </div>
+        <div class="section-efficiency-block">
+          <p class="block-title">
+            Незамедлительная диагностика
+          </p>
+          <p class="block-content">
+            Удаленные консультации в дополненной реальности позволяют провести незамедлительную диагностику поломки, выработать план по ее устранению и, где это возможно, выполнить ремонт силами полевых сотрудников.
+          </p>
         </div>
       </div>
     </div>
