--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container container-menu">
             <div class="header-main">
                 <div class="content-title">
                     Удаленные консультации
