--- a/index.html
+++ b/index.html
@@ -18,13 +18,60 @@
             <img src="./images/customer_support_ico.svg" alt="customer support">
           </div>
         </div>
-        <div class="section-efficiency-block">
-          <p class="block-title">
-            Незамедлительная диагностика
-          </p>
-          <p class="block-content">
-            Удаленные консультации в дополненной реальности позволяют провести незамедлительную диагностику поломки, выработать план по ее устранению и, где это возможно, выполнить ремонт силами полевых сотрудников.
-          </p>
+        <div class="blocks_container">
+
+          <div class="card-big">
+            <p class="card-big-title">
+              Незамедлительная диагностика
+            </p>
+            <p class="card-big-description">
+              Удаленные консультации в дополненной реальности позволяют провести незамедлительную диагностику поломки, выработать план по ее устранению и, где это возможно, выполнить ремонт силами полевых сотрудников.
+            </p>
+          </div>
+
+          <div class="cards_container">
+            
+            <div class="card">
+              <img class="card-ico" src="./images/time_efficiency_ico.svg" alt="time efficiency">
+              <p class="card-title">
+                Оборудование не простаивает
+              </p>
+              <p class="card-description">
+                Даже лучшее оборудование может сломаться, но быстрая реакция и мгновенная помощь с первых минут минимизируют денежные и репутационные потери для вас и ваших клиентов. 
+              </p>
+            </div>
+
+            <div class="card">
+              <img class="card-ico" src="./images/customer_service_ico.svg" alt="time efficiency">
+              <p class="card-title">
+                Затраты на командировки сокращаются
+              </p>
+              <p class="card-description">
+                Эксперты меньше ездят в командировки, решая вопросы «на местах» и консультируя большее количество полевых сотрудников. 
+              </p>
+            </div>
+
+            <div class="card">
+              <img class="card-ico" src="./images/team_ico.svg" alt="time efficiency">
+              <p class="card-title">
+                Опыт работы сотрудников не препятствует качеству обслуживания 
+              </p>
+              <p class="card-description">
+                Получая пошаговые 3D-инструкции от экспертов, даже новые сотрудники могут провести ремонт в нестандартной ситуации. 
+              </p>
+            </div>
+
+            <div class="card">
+              <img class="card-ico" src="./images/time_efficiency_ico.svg" alt="time efficiency">
+              <p class="card-title">
+                Внешние факторы не влияют на качество обслуживания
+              </p>
+              <p class="card-description">
+                Наличие билетов на поезд или самолет, открытость границ и другие внешние факторы не станут препятствием на пути к идеальному сервису. 
+              </p>
+            </div>
+
+          </div>
         </div>
       </div>
     </div>
