--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
                 <div class="menu-logo">
                     <a href="#!" class="logo-link">
                         <img src="./images/header-logo.svg" alt="XRAdept">
+                        <span class="logo-text">Adept</span>
                     </a>
                 </div>
-                <div class="menu-list">
+                <nav class="menu-list">
+                    <!--<div class="menu-hamburger">
+                        <div class="lines-wrap">
+                            <span class="menu-btn-line" style="transform: rotate(0deg) translateY(0px);"></span>
+                            <span class="menu-btn-line" style="transform: rotate(0deg);"></span>
+                            <span class="menu-btn-line" style="opacity: 1;"></span>
+                        </div>   
+                    </div>-->
                     <ul class="menu-items">
                         <li class="menu-link">
                             <a href="#!" class="link-item">Скачать</a>
@@ -32,7 +40,7 @@
                             </a>
                         </li>
                     </ul>
-                </div>
+                </nav>
             </div>
         </div>
         <div class="container container-menu">
