--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
           </div>
         </div>
       </div>
+      <div class="section-picture">
+        <div class="container">
+          <img src="./images/phone_hand.png" alt="hand whith phone">
+        </div>
+      </div>
     </div>
 </body>
 </html>
