Добавил медиазапросы, но еще над ними работаю

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                     </a>
                 </div>
                 <nav class="menu-list">
-                    <!--<div class="menu-hamburger">
+                    <div class="menu-hamburger">
                         <div class="lines-wrap">
                             <span class="menu-btn-line" style="transform: rotate(0deg) translateY(0px);"></span>
                             <span class="menu-btn-line" style="transform: rotate(0deg);"></span>
                             <span class="menu-btn-line" style="opacity: 1;"></span>
                         </div>   
-                    </div>-->
+                    </div>
                     <ul class="menu-items">
                         <li class="menu-link">
                             <a href="#!" class="link-item">Скачать</a>
@@ -41,6 +41,32 @@
                         </li>
                     </ul>
                 </nav>
+                <!--<nav class="mobile-menu" style="box-shadow: rgba(13, 5, 37, 0.08) 0px 4px 4px; transform: translateY(0%);">
+                    <ul class="menu-items">
+                        <a href="#!">
+                            <li class="menu-link">
+                                <a href="#!" class="link-item">
+                                    <img src="./images/media-singin-ico.svg" alt="Sing-in">
+                                </a>
+                            </li>
+                        </a>
+                        <a href="#!">
+                            <li class="menu-link">
+                                <a href="#!" class="link-item">Тарифы</a>
+                            </li>
+                        </a>
+                        <a href="#!">
+                            <li class="menu-link">
+                                <a href="#!" class="link-item">Скачать</a>
+                            </li>
+                        </a>
+                        <a href="#!">
+                            <li class="menu-link">
+                                <a href="#!" class="link-item">Свяжитесь с нами</a>
+                            </li>
+                        </a>
+                    </ul>
+                </nav>-->
             </div>
         </div>
         <div class="container container-menu">
