Секция слайдер без адаптива (добавил свечение)

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <div class="continaer">
                 <img src="images/phone.png" alt="possibilities-phone" class="possibilities-phone">
                 <img src="images/macbook-phone.png" alt="possibilities-macbook-phone" class="possibilities-macbook-phone">
+                <img src="images/ellipse.png" alt="possibilities-ellipse" class="possibilities-ellipse">
                 <div class="possibilities-navigation">
                     <label for="slide-1" class="possibilities-line possibilities-line-first possibilities-line-active"></label>
                     <label for="slide-2" class="possibilities-line possibilities-line-second"></label>
@@ -63,6 +64,7 @@
             </div>
             <div class="continaer">
                 <img src="images/macbook.png" alt="possibilities-macbook" class="possibilities-macbook">
+                <img src="images/ellipse.png" alt="possibilities-macbook-ellipse" class="possibilities-macbook-ellipse">
                 <div class="possibilities-navigation">
                     <label for="slide-1" class="possibilities-line possibilities-line-first"></label>
                     <label for="slide-2" class="possibilities-line possibilities-line-second possibilities-line-active"></label>
