Переименовал картинки и alt

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             Больше, чем просто удаленная поддержка 
           </div>
           <div class="subtitle-ico">
-            <img src="./images/customer_support_ico.svg" alt="customer support">
+            <img src="./images/customer-support-ico.svg" alt="Поддержка клиентов">
           </div>
         </div>
-        <div class="blocks_container">
+        <div class="blocks-container">
 
           <div class="card-big">
             <p class="card-big-title">
@@ -29,10 +29,9 @@
             </p>
           </div>
 
-          <div class="cards_container">
-            
+          <div class="cards-container">
             <div class="card">
-              <img class="card-ico" src="./images/time_efficiency_ico.svg" alt="time efficiency">
+              <img class="card-ico" src="./images/time-efficiency-ico.svg" alt="Эффективное использование времени">
               <p class="card-title">
                 Оборудование не простаивает
               </p>
@@ -42,7 +41,7 @@
             </div>
 
             <div class="card">
-              <img class="card-ico" src="./images/customer_service_ico.svg" alt="time efficiency">
+              <img class="card-ico" src="./images/customer-service-ico.svg" alt="Удаленная поддержка клиентов">
               <p class="card-title">
                 Затраты на командировки сокращаются
               </p>
@@ -52,7 +51,7 @@
             </div>
 
             <div class="card">
-              <img class="card-ico" src="./images/team_ico.svg" alt="time efficiency">
+              <img class="card-ico" src="./images/team-ico.svg" alt="Работа в команде">
               <p class="card-title">
                 Опыт работы сотрудников не препятствует качеству обслуживания 
               </p>
@@ -62,7 +61,7 @@
             </div>
 
             <div class="card">
-              <img class="card-ico" src="./images/time_efficiency_ico.svg" alt="time efficiency">
+              <img class="card-ico" src="./images/time-efficiency-ico.svg" alt="Внешние факторы">
               <p class="card-title">
                 Внешние факторы не влияют на качество обслуживания
               </p>
@@ -76,7 +75,7 @@
       </div>
       <div class="section-picture">
         <div class="container">
-          <img src="./images/phone_hand.png" alt="hand whith phone">
+          <img src="./images/phone-hand.png" alt="Удаленные консультации">
         </div>
       </div>
     </div>
