Поменял структуру html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="section-efficiency">
       <div class="container">
-        <p class="about">Эффективность</p>
         <div class="subtitle-block">
-          <div class="section-subtitle">
-            Больше, чем просто удаленная поддержка 
+          <div class="subtitle-content">
+            <p class="about">Эффективность</p>
+            <p class="subtitle">Больше, чем просто удаленная поддержка</p>
           </div>
           <div class="subtitle-ico">
             <img src="./images/customer-support-ico.svg" alt="Поддержка клиентов">
