--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input id="slide-3" type="radio" name="sliders">
         <div class="slide slide-one">
             <div class="possibilities-section">
-                <div class="continaer">
+                <div class="possibilities-container">
                     <p class="possibilities-maintitle white-maintitle">
                         Больше возможностей
                     </p>
@@ -21,7 +21,7 @@
                         <h2 class="possibilities-h2 white-h2">
                             Профессиональные инструменты для вашего бизнеса
                         </h2>
-                        <img src="images/possibilities-logo.svg" alt="possibilities-logo" class="possibilities-logo">
+                        <img src="images/possibilities-logo.svg" alt="Профессиональные инструменты" class="possibilities-logo">
                     </div>
                     <p class="possibilities-title white-title">
                         Удалённый эксперт
@@ -31,20 +31,15 @@
                     </p>
                 </div>
             </div>
-            <div class="continaer">
-                <img src="images/phone.png" alt="possibilities-phone" class="possibilities-phone">
-                <img src="images/macbook-phone.png" alt="possibilities-macbook-phone" class="possibilities-macbook-phone">
-                <img src="images/ellipse.png" alt="possibilities-ellipse" class="possibilities-ellipse">
-                <div class="possibilities-navigation">
-                    <label for="slide-1" class="possibilities-line possibilities-line-first possibilities-line-active"></label>
-                    <label for="slide-2" class="possibilities-line possibilities-line-second"></label>
-                    <label for="slide-3" class="possibilities-line possibilities-line-third"></label>
-                </div>
+            <div class="possibilities-foto">
+                <img src="images/phone.png" alt="Телефон" class="possibilities-phone">
+                <img src="images/macbook-phone.png" alt="Макбук" class="possibilities-macbook-phone">
+                <img src="images/ellipse.png" alt="Свечение" class="possibilities-ellipse">
             </div>
         </div>
         <div class="slide slide-two">
             <div class="possibilities-section">
-                <div class="continaer">
+                <div class="possibilities-container">
                     <p class="possibilities-maintitle white-maintitle">
                         Больше возможностей
                     </p>
@@ -62,19 +57,14 @@
                     </p>
                 </div>
             </div>
-            <div class="continaer">
-                <img src="images/macbook.png" alt="possibilities-macbook" class="possibilities-macbook">
-                <img src="images/ellipse.png" alt="possibilities-macbook-ellipse" class="possibilities-macbook-ellipse">
-                <div class="possibilities-navigation">
-                    <label for="slide-1" class="possibilities-line possibilities-line-first"></label>
-                    <label for="slide-2" class="possibilities-line possibilities-line-second possibilities-line-active"></label>
-                    <label for="slide-3" class="possibilities-line possibilities-line-third"></label>
-                </div>
+            <div class="possibilities-foto">
+                <img src="images/macbook.png" alt="Макбук" class="possibilities-macbook">
+                <img src="images/ellipse.png" alt="Свечение" class="possibilities-macbook-ellipse">
             </div>
         </div>
         <div class="slide slide-three">
             <div class="possibilities-section">
-                <div class="continaer">
+                <div class="possibilities-container">
                     <p class="possibilities-maintitle white-maintitle">
                         Больше возможностей
                     </p>
@@ -85,21 +75,21 @@
                         <img src="images/possibilities-logo.svg" alt="possibilities-logo" class="possibilities-logo">
                     </div>
                     <p class="possibilities-title white-title">
-                        Инструкции в дополненной реальности(<span class="white-subtitle"> В стадии бета-тестирования </span>)
+                        Инструкции в дополненной реальности(<span class="white-subtitle">*в стадии бета-тестирования </span>)
                     </p>
                     <p class="possibilities-subtitle white-subtitle">
                         Снимайте видео и добавляйте в него графические элементы. шаг за шагом показывая, как правильно провести настройку, сборку и ремонт.
                     </p>
                 </div>
             </div>
-            <div class="continaer">
-                <img src="images/microchips.png" alt="possibilities-microchips" class="possibilities-microchips">
-                <div class="possibilities-navigation">
-                    <label for="slide-1" class="possibilities-line possibilities-line-first"></label>
-                    <label for="slide-2" class="possibilities-line possibilities-line-second"></label>
-                    <label for="slide-3" class="possibilities-line possibilities-line-third possibilities-line-active"></label>
-                </div>
+            <div class="possibilities-foto">
+                <img src="images/microchips.png" alt="Микросхемы" class="possibilities-microchips">
             </div>
+        </div>
+        <div class="possibilities-navigation">
+            <label for="slide-1" class="possibilities-line possibilities-line-first"></label>
+            <label for="slide-2" class="possibilities-line possibilities-line-second"></label>
+            <label for="slide-3" class="possibilities-line possibilities-line-third"></label>
         </div>
     </section>
 </body>
