--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="continaer">
+        <div id="image"></div>
+    </div>    
 </body>
 </html>
