--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!--Блок эффективность-->
     <div class="section-efficiency">
       <div class="container">
         <div class="subtitle-block">
