Исправлены ошибки, добавлены некоторые уточнения

--- a/index.html
+++ b/index.html
@@ -4,73 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XRAdept</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        <div class="container-menu">
-            <div class="header-menu">
-                <div class="menu-logo">
-                    <a href="#!" class="logo-link">
-                        <img src="./images/header-logo.svg" alt="XRAdept">
-                        <span class="logo-text">Adept</span>
-                    </a>
-                </div>
-                <nav class="menu-list">
-                    <div class="menu-hamburger">
-                        <div class="lines-wrap">
-                            <span class="menu-btn-line" style="transform: rotate(0deg) translateY(0px);"></span>
-                            <span class="menu-btn-line" style="transform: rotate(0deg);"></span>
-                            <span class="menu-btn-line" style="opacity: 1;"></span>
-                        </div>   
-                    </div>
-                    <ul class="menu-items">
-                        <li class="menu-link">
-                            <a href="#!" class="link-item">Скачать</a>
-                        </li>
-                        <li class="menu-link">
-                            <a href="#!" class="link-item">Тарифы</a>
-                        </li>
-                        <li class="menu-link">
-                            <a href="#!" class="link-item">Свяжитесь с нами</a>
-                        </li>
-                        <li class="menu-link">
-                            <a href="#!" class="link-item">
-                                <img src="./images/singin-ico.svg" alt="Sing-in">
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-                <!--<nav class="mobile-menu" style="box-shadow: rgba(13, 5, 37, 0.08) 0px 4px 4px; transform: translateY(0%);">
-                    <ul class="menu-items">
-                        <a href="#!">
-                            <li class="menu-link">
-                                <a href="#!" class="link-item">
-                                    <img src="./images/media-singin-ico.svg" alt="Sing-in">
-                                </a>
-                            </li>
-                        </a>
-                        <a href="#!">
-                            <li class="menu-link">
-                                <a href="#!" class="link-item">Тарифы</a>
-                            </li>
-                        </a>
-                        <a href="#!">
-                            <li class="menu-link">
-                                <a href="#!" class="link-item">Скачать</a>
-                            </li>
-                        </a>
-                        <a href="#!">
-                            <li class="menu-link">
-                                <a href="#!" class="link-item">Свяжитесь с нами</a>
-                            </li>
-                        </a>
-                    </ul>
-                </nav>-->
+        <div class="header-menu">
+            <div class="menu-logo">
+                <a href="#!" class="logo-link">
+                    <img src="images/header-logo.svg" alt="XRAdept">
+                    <span class="logo-text">Adept</span>
+                </a>
             </div>
+            <nav class="menu-list">
+                <div class="menu-hamburger">
+                    <div class="lines-wrap">
+                        <span class="menu-btn-line" style="transform: rotate(0deg) translateY(0px);"></span>
+                        <span class="menu-btn-line" style="transform: rotate(0deg);"></span>
+                        <span class="menu-btn-line" style="opacity: 1;"></span>
+                    </div>   
+                </div>
+                <ul class="menu-items">
+                    <li class="menu-link">
+                        <a href="#!" class="link-item">Скачать</a>
+                    </li>
+                    <li class="menu-link">
+                        <a href="#!" class="link-item">Тарифы</a>
+                    </li>
+                    <li class="menu-link">
+                        <a href="#!" class="link-item">Свяжитесь с нами</a>
+                    </li>
+                    <li class="menu-link">
+                        <a href="#!" class="link-item">
+                            <img src="images/signIn-ico.svg" alt="Вход в личный кабинет">
+                        </a>
+                    </li>
+                </ul>
+            </nav>                
         </div>
-        <div class="container container-menu">
+        <div class="container">
             <div class="header-main">
                 <div class="content-title">
                     Удаленные консультации
