Начните пользоваться XR Adept в 3 шага

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="continaer">
-        <div id="image"></div>
+        <div class="subtitle-block"></div>
+        <div class="subtitle-content">
+                <p class=start>Простой старт</p>
+                <p class=step>Начните пользоваться XR Adept в 3 шага</p>
+        </div>  
     </div>    
 </body>
 </html>
