--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <div class="continaer">
-        <div class="subtitle-block"></div>
+        <div class="subtitle-block">
         <div class="subtitle-content">
                 <p class=start>Простой старт</p>
                 <p class=step>Начните пользоваться XR Adept в 3 шага</p>
-        </div>  
+        </div>
+        </div>
+        <div class="img">
+            <img src="images/Rectangle131.jpg" alt="Начните пользоваться XR Adept в 3 шага">
+        </div>
     </div>    
 </body>
 </html>
