--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <div class="img">
             <img src="images/Rectangle131.jpg" alt="Начните пользоваться XR Adept в 3 шага">
         </div>
+        <div class="group1">
+            <div class="line1"></div>
+        </div>
     </div>    
 </body>
 </html>
