--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <img src="images/Rectangle131.jpg" alt="Начните пользоваться XR Adept в 3 шага">
         </div>
         <div class="group1">
-            <div class="line1"></div>
+            <p class="numeral">1</p>
+            <div class="line"></div>
         </div>
     </div>    
 </body>
