--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XRAdept</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="continaer">
         <div class="subtitle-block">
-        <div class="subtitle-content">
+            <div class="subtitle-content">
                 <p class=start>Простой старт</p>
                 <p class=step>Начните пользоваться XR Adept в 3 шага</p>
-        </div>
+            </div>
         </div>
         <div class="img">
             <img src="images/Rectangle131.jpg" alt="Начните пользоваться XR Adept в 3 шага">
         </div>
         <div class="group1">
-            <p class="numeral">1</p>
+            <div class=numeral>
+                <img src="images/1.png" alt="1">
+            </div>
             <div class="line"></div>
         </div>
-    </div>    
+    </div>
 </body>
+
 </html>
