--- a/index.html
+++ b/index.html
@@ -20,10 +20,19 @@
             <img src="images/Rectangle131.jpg" alt="Начните пользоваться XR Adept в 3 шага">
         </div>
         <div class="group1">
-            <div class=numeral>
-                <img src="images/1.png" alt="1">
-            </div>
+            <div class=numeral></div>
             <div class="line"></div>
+            <div class="Sign">
+                <h3>Зарегистрируйтесь</h3>
+            </div>
+            <div class="free">
+                <p>и начните пользоваться сервисом бесплатно</p>
+            </div>
+            <div class="button">
+                <a href="#!">
+                    <span class="logo-text">Начать</span>
+                </a>
+            </div>
         </div>
     </div>
 </body>
