--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
                 </a>
             </div>
         </div>
+        <div class="group2">
+            <div class=numeral2></div>
+            <div class="line"></div>
+            <div class="Sign">
+                <h3>Установите</h3>
+            </div>
+            <div class="free">
+                <p> <a href="#">-приложение</a> для эксперта XR Adept для ПК <br><br>
+
+                -мобильное приложение для стороны, нуждающейся в поддержке
+                </p>
+            </div>
+            
     </div>
 </body>
 
