Верстка без адаптива

--- a/index.html
+++ b/index.html
@@ -2,52 +2,72 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XRAdept</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>XRAdept</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="continaer">
-        <div class="subtitle-block">
-            <div class="subtitle-content">
-                <p class=start>Простой старт</p>
-                <p class=step>Начните пользоваться XR Adept в 3 шага</p>
-            </div>
+  <div class="container">
+    <div class="subtitle-block">
+    <p class="start">
+      Простой старт
+    </p>
+    <h2 class="step">
+      Начните пользоваться XR Adept в 3 шага
+    </h2>
+    <div class="columns">
+      <div class="register">
+        <div class="numeral">
+          <img src="images/numeral.png" alt="Шаг первый" class="start">
+          <hr class="line">
         </div>
-        <div class="img">
-            <img src="images/Rectangle131.jpg" alt="Начните пользоваться XR Adept в 3 шага">
+        <p class="sign">
+          Зарегистри&shy;руйтесь
+        </p>
+        <p class="free">
+          и начните пользоваться сервисом бесплатно
+        </p>
+        <a href="#!" class="button-link">
+          <div class="button">
+            Начать
+          </div>
+        </a>
+      </div>
+      <div class="second">
+        <div class="numeral">
+          <img src="images/numeral2.png" alt="Шаг второй" class="start">
+          <hr class="line">
         </div>
-        <div class="group1">
-            <div class=numeral></div>
-            <div class="line"></div>
-            <div class="Sign">
-                <h3>Зарегистрируйтесь</h3>
-            </div>
-            <div class="free">
-                <p>и начните пользоваться сервисом бесплатно</p>
-            </div>
-            <div class="button">
-                <a href="#!">
-                    <span class="logo-text">Начать</span>
-                </a>
-            </div>
+        <p class="sign">
+          Установите
+        </p>
+        <p class="free">
+          - <a href="#!" class="free-link">приложение</a> для эксперта XR Adept для ПК <br> <br>
+          - мобильное приложение для стороны, нуждающейся в поддержке
+        </p>
+        <div class="google">
+          <a href="#!">
+            <img src="images/google-play.svg" alt="Гугл плей маркет">
+          </a>
+          <a href="#!">
+            <img src="images/app-store.svg" alt="эпп стор">
+          </a>
         </div>
-        <div class="group2">
-            <div class=numeral2></div>
-            <div class="line"></div>
-            <div class="Sign">
-                <h3>Установите</h3>
-            </div>
-            <div class="free">
-                <p> <a href="#">-приложение</a> для эксперта XR Adept для ПК <br><br>
-
-                -мобильное приложение для стороны, нуждающейся в поддержке
-                </p>
-            </div>
-            
+      </div>
+      <div class="third">
+        <div class="numeral">
+          <img src="images/numeral3.png" alt="Шаг третий" class="start">
+        </div>
+        <p class="sign">
+          Введите ID партнера
+        </p>
+        <p class="free">
+          в мобильном или ПК приложении и начните консультацию
+        </p>
+      </div>
     </div>
-</body>
-
-</html>
+  </div>
+  <img src="images/start-one.jpg" alt="Начните пользоваться XR Adept" class="img">
+  </div>
